--- a/index.css
+++ b/index.css
@@ -29,11 +29,12 @@ footer {
   flex-direction: column;
 }
 
-main {
+.main {
   display: flex;
   background-color: #FBFFF4;
   width: 100%;
   height: 100%;
+  flex-wrap: wrap;
 }
 
 .item {
