--- a/index.css
+++ b/index.css
@@ -34,8 +34,7 @@ footer {
   background-color: #FBFFF4;
   width: 100%;
   height: 100%;
-  flex-wrap: wrap;
-  flex-direction: column;
+  flex-flow: column wrap;
 }
 
 .item {
