--- a/index.css
+++ b/index.css
@@ -8,18 +8,24 @@ header {
   background-color: #FBFFF4;
   height: 80px;
   width: 100%;
+  flex-shrink: 0;
 }
 
 main {
+  display: flex;
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;1
 }
 
 footer {
   background-color: #DAEEEF;
   height: 80px;
   width: 100%;
+  flex-shrink: 3;
 }
 
 .flex-container {
@@ -29,17 +35,14 @@ footer {
   flex-direction: column;
 }
 
-.main {
-  display: flex;
-  background-color: #FBFFF4;
-  width: 100%;
-  height: 100%;
-  flex-flow: column wrap;
-}
-
 .item {
   height: 100px;
   width: 100px;
   margin: 5px;
-  background-color: #FCF2EC;
+  background-color: #f3c5e0;
+}
+
+.setWidth {
+  flex-basis: 100px;
+  flex-grow: 1;
 }
